--- a/blog-web/src/main/webapp/index.html
+++ b/blog-web/src/main/webapp/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Blog AngularJS - Gabriel Feitosa</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+    <script src="js/lib/angular.min.js"></script>
     
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/blog.css">
   	
@@ -14,7 +14,7 @@
 
   <body>
 	
-    <div class="blog-masthead">
+    <div id="navegacao" class="blog-masthead">
       <div class="container" ng-controller="NavController">
         <nav class="blog-nav">
           <a class="blog-nav-item" ng-repeat="m in menu" href="{{m.href}}" ng-class="{ 'active': $index == selectedIndex }"
@@ -61,9 +61,9 @@
     </div><!-- /.container -->
 
     <footer class="blog-footer">
-      <p>Gabriel Feitosa - 2015</p>
+      <p><a target="_blank" href="https://github.com/gfeitosa">Gabriel Feitosa</a> - 2015</p>
       <p>
-        <a href="#/">Back to top</a>
+        <a href="#navegacao/">Back to top</a>
       </p>
     </footer>
 
@@ -71,15 +71,14 @@
     <!--Angular and Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/lib/jquery-1.11.2.min.js"></script>
     <script src="js/lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular-resource.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular-route.js"></script> 
+    <script src="js/lib/angular-resource.min.js"></script>
+	<script src="js/lib/angular-route.min.js"></script> 
 	<script type="text/javascript" src="js/app/app.js"></script>
 	<script type="text/javascript" src="js/app/route.js"></script>
 	<script type="text/javascript" src="js/controller/PostController.js"></script>
 	<script type="text/javascript" src="js/controller/NavController.js"></script>
 	<script type="text/javascript" src="js/services/PostService.js"></script>
-	<script type="text/javascript" src="js/lib/util.js"></script>
   </body>
 </html>
