--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -25,6 +25,24 @@
       <div class="container" ng-controller="NavController">
         <nav class="blog-nav">
          <a class="blog-nav-item" ng-repeat="m in menu" ui-sref="{{m.state}}" ng-class="{ 'active': activeClass(m.state) }">{{m.item}}</a>
+         <form class="navbar-form navbar-right">
+           <span ng-show="true">
+             <div class="form-group">
+               <input type="text" placeholder="Email" class="form-control">
+             </div>
+             <div class="form-group">
+               <input type="password" placeholder="Password" class="form-control">
+             </div>
+             <button type="submit" class="btn btn-success">Sign in</button>
+           </span>
+           <span ng-hide="true">
+             <div class="form-group">
+               <label style="color: #ffffff;" >gabrielfeitosa</label>
+             </div>
+             <button type="submit" class="btn btn-success">Logout</button>
+           </span>
+
+         </form>
         </nav>
       </div>
     </div>
@@ -83,6 +101,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
