--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -25,24 +25,27 @@
     <![endif]-->
 
     <div id="navegacao" class="blog-masthead" ng-cloak>
-      <div class="container" ng-controller="NavController">
+      <div class="container" >
         <nav class="blog-nav">
-         <a class="blog-nav-item" ng-repeat="m in menu" ui-sref="{{m.state}}" ng-class="{ 'active': activeClass(m.state) }">{{m.item}}</a>
-         <form class="navbar-form navbar-right" ng-controller="LoginController">
-           <span ng-if="!isLogged()">
+          <span ng-controller="NavController as nav">
+
+           <a class="blog-nav-item" ng-repeat="m in nav.menu" ui-sref="{{m.state}}" ng-class="{ 'active': nav.activeClass(m.state) }">{{m.item}}</a>
+          </span>
+          <form class="navbar-form navbar-right" ng-controller="LoginController as loginCtrl">
+           <span ng-if="!loginCtrl.isLogged()">
              <div class="form-group">
                <input type="text" placeholder="Email" class="form-control" ng-model="email">
              </div>
              <div class="form-group">
                <input type="password" placeholder="Password" class="form-control" ng-model="pass">
              </div>
-             <button type="submit" ng-click="doLogin(email,pass);" class="btn btn-success">Sign in</button>
+             <button type="submit" ng-click="loginCtrl.doLogin(email,pass);" class="btn btn-success">Sign in</button>
            </span>
-           <span ng-if="isLogged()">
+           <span ng-if="loginCtrl.isLogged()">
              <div class="form-group">
-               <label style="color: #ffffff;margin-right:5px;" >Olá, {{user.nome}}</label>
+               <label style="color: #ffffff;margin-right:5px;" >Olá, {{loginCtrl.user.nome}}</label>
              </div>
-             <button type="submit" class="btn btn-success" ng-click="doLogout();">Logout</button>
+             <button type="submit" class="btn btn-success" ng-click="loginCtrl.doLogout();">Logout</button>
            </span>
 
          </form>
@@ -115,8 +118,13 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/services.js"></script>
         <script src="scripts/factory.js"></script>
-        <script src="scripts/controllers/utilControllers.js"></script>
-        <script src="scripts/controllers/postController.js"></script>
+        <script src="scripts/config.js"></script>
+        <script src="scripts/filters.js"></script>
+        <script src="scripts/controllers/util/ModalController.js"></script>
+        <script src="scripts/controllers/util/NavController.js"></script>
+        <script src="scripts/controllers/post/PostEditController.js"></script>
+        <script src="scripts/controllers/post/PostDetailController.js"></script>
+        <script src="scripts/controllers/post/PostListController.js"></script>
         <script src="scripts/controllers/comentarioController.js"></script>
         <script src="scripts/controllers/loginController.js"></script>
         <script src="scripts/lib/loading-bar.js"></script>
