--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
+    <link rel="stylesheet" href="bower_components/toastr/toastr.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -126,6 +127,7 @@
     <script src="scripts/factories/auth.factory.js"></script>
     <script src="scripts/factories/modal.factory.js"></script>
     <script src="scripts/factories/httpInterceptor.factory.js"></script>
+    <script src="scripts/toasterFactory.service.js"></script>
     <!-- Config -->
     <script src="scripts/config/router.config.js"></script>
     <script src="scripts/config/storage.config.js"></script>
