--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
+    <link rel="stylesheet" href="bower_components/toastr/toastr.css"/>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -108,18 +109,21 @@
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/services.js"></script>
-        <script src="scripts/factory.js"></script>
-        <script src="scripts/controllers/utilControllers.js"></script>
-        <script src="scripts/controllers/postController.js"></script>
-        <script src="scripts/controllers/comentarioController.js"></script>
-        <script src="scripts/controllers/loginController.js"></script>
-        <script src="scripts/lib/loading-bar.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/services.js"></script>
+    <script src="scripts/toasterFactory.service.js"></script>
+    <script src="scripts/factory.js"></script>
+    <script src="scripts/controllers/utilControllers.js"></script>
+    <script src="scripts/controllers/postController.js"></script>
+    <script src="scripts/controllers/comentarioController.js"></script>
+    <script src="scripts/controllers/loginController.js"></script>
+    <script src="scripts/lib/loading-bar.js"></script>
+    <!-- endbuild -->
+
 </body>
 </html>
