--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -94,7 +94,7 @@
       <p><a target="_blank" href="https://github.com/gabrielfeitosa">Gabriel Feitosa</a> - 2015</p>
       <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       <p>
-        <a href="#navegacao/">Back to top</a>
+        <a href="#navegacao">Back to top</a>
       </p>
     </footer>
 
@@ -114,20 +114,31 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/services.js"></script>
-        <script src="scripts/factory.js"></script>
-        <script src="scripts/config.js"></script>
-        <script src="scripts/filters.js"></script>
-        <script src="scripts/controllers/util/ModalController.js"></script>
-        <script src="scripts/controllers/util/NavController.js"></script>
-        <script src="scripts/controllers/post/PostEditController.js"></script>
-        <script src="scripts/controllers/post/PostDetailController.js"></script>
-        <script src="scripts/controllers/post/PostListController.js"></script>
-        <script src="scripts/controllers/comentarioController.js"></script>
-        <script src="scripts/controllers/loginController.js"></script>
-        <script src="scripts/lib/loading-bar.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <!-- Filters -->
+    <script src="scripts/filters/limitar.texto.filter.js"></script>
+    <!-- Services -->
+    <script src="scripts/services/comentario.service.js"></script>
+    <script src="scripts/services/auth.service.js"></script>
+    <script src="scripts/services/post.service.js"></script>
+    <!-- Factories -->
+    <script src="scripts/factories/auth.factory.js"></script>
+    <script src="scripts/factories/modal.factory.js"></script>
+    <script src="scripts/factories/httpInterceptor.factory.js"></script>
+    <!-- Config -->
+    <script src="scripts/config/router.config.js"></script>
+    <script src="scripts/config/storage.config.js"></script>
+    <!-- Controllers -->
+    <script src="scripts/controllers/util/modal.controller.js"></script>
+    <script src="scripts/controllers/util/nav.controller.js"></script>
+    <script src="scripts/controllers/post/post.edit.controller.js"></script>
+    <script src="scripts/controllers/post/post.detail.controller.js"></script>
+    <script src="scripts/controllers/post/post.list.controller.js"></script>
+    <script src="scripts/controllers/post/comentario.controller.js"></script>
+    <script src="scripts/controllers/login.controller.js"></script>
+    <!-- Lib -->
+    <script src="scripts/lib/loading-bar.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
