--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -10,7 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
-    <link rel="stylesheet" href="bower_components/toastr/toastr.css"/>
+    <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -112,6 +112,7 @@
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -127,7 +128,7 @@
     <script src="scripts/factories/auth.factory.js"></script>
     <script src="scripts/factories/modal.factory.js"></script>
     <script src="scripts/factories/httpInterceptor.factory.js"></script>
-    <script src="scripts/toasterFactory.service.js"></script>
+    <script src="scripts/factories/toasterFactory.service.js"></script>
     <!-- Config -->
     <script src="scripts/config/router.config.js"></script>
     <script src="scripts/config/storage.config.js"></script>
