refatorando as rotas e isolando...

--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -123,6 +123,7 @@
     <script src="scripts/services/auth.service.js"></script>
     <script src="scripts/services/post.service.js"></script>
     <!-- Factories -->
+    <script src="scripts/factories/router.factory.js"></script>
     <script src="scripts/factories/auth.factory.js"></script>
     <script src="scripts/factories/modal.factory.js"></script>
     <script src="scripts/factories/httpInterceptor.factory.js"></script>
