--- a/blogYo/app/index.html
+++ b/blogYo/app/index.html
@@ -122,6 +122,7 @@
     <script src="scripts/services/comentario.service.js"></script>
     <script src="scripts/services/auth.service.js"></script>
     <script src="scripts/services/post.service.js"></script>
+    <script src="scripts/services/post.service.js"></script>
     <!-- Factories -->
     <script src="scripts/factories/router.factory.js"></script>
     <script src="scripts/factories/auth.factory.js"></script>
